
[TestMetricbeatConfig/default - 1]
metricbeat.modules:
  - module: logstash
    metricsets:
      - node
      - node_stats
    period: 10s
    hosts: ["https://localhost:9200"]
    xpack.enabled: true
    
    username: elastic
    
    
    password: password
    
    ssl.enabled: true
    # The ssl verification_mode is set to `certificate` in the config template to verify that the certificate is signed by a trusted authority,
    # but does not perform any hostname verification. This is used when SSL is enabled with or without CA, to support self-signed certificate
    # with a custom CA or custom certificates with or without a CA that most likely are not issued for `localhost`.
    ssl.verification_mode: "certificate"
    ssl.certificate_authorities: ["/mount/ca.crt"]

processors:
  - add_cloud_metadata: {}
  - add_host_metadata: {}

# Elasticsearch output configuration is generated

---

[TestMetricbeatConfig/no_password - 1]
metricbeat.modules:
  - module: logstash
    metricsets:
      - node
      - node_stats
    period: 10s
    hosts: ["https://localhost:9200"]
    xpack.enabled: true
    
    username: elastic
    
    
    ssl.enabled: true
    # The ssl verification_mode is set to `certificate` in the config template to verify that the certificate is signed by a trusted authority,
    # but does not perform any hostname verification. This is used when SSL is enabled with or without CA, to support self-signed certificate
    # with a custom CA or custom certificates with or without a CA that most likely are not issued for `localhost`.
    ssl.verification_mode: "certificate"
    ssl.certificate_authorities: ["/mount/ca.crt"]

processors:
  - add_cloud_metadata: {}
  - add_host_metadata: {}

# Elasticsearch output configuration is generated

---

[TestMetricbeatConfig/no_user_+_password - 1]
metricbeat.modules:
  - module: logstash
    metricsets:
      - node
      - node_stats
    period: 10s
    hosts: ["https://localhost:9200"]
    xpack.enabled: true
    
    
    ssl.enabled: true
    # The ssl verification_mode is set to `certificate` in the config template to verify that the certificate is signed by a trusted authority,
    # but does not perform any hostname verification. This is used when SSL is enabled with or without CA, to support self-signed certificate
    # with a custom CA or custom certificates with or without a CA that most likely are not issued for `localhost`.
    ssl.verification_mode: "certificate"
    ssl.certificate_authorities: ["/mount/ca.crt"]

processors:
  - add_cloud_metadata: {}
  - add_host_metadata: {}

# Elasticsearch output configuration is generated

---

[TestMetricbeatConfig/no_TLS - 1]
metricbeat.modules:
  - module: logstash
    metricsets:
      - node
      - node_stats
    period: 10s
    hosts: ["https://localhost:9200"]
    xpack.enabled: true
    
    username: elastic
    
    
    password: password
    
    ssl.enabled: false
    # The ssl verification_mode is set to `certificate` in the config template to verify that the certificate is signed by a trusted authority,
    # but does not perform any hostname verification. This is used when SSL is enabled with or without CA, to support self-signed certificate
    # with a custom CA or custom certificates with or without a CA that most likely are not issued for `localhost`.
    ssl.verification_mode: "certificate"
    ssl.certificate_authorities: ["/mount/ca.crt"]

processors:
  - add_cloud_metadata: {}
  - add_host_metadata: {}

# Elasticsearch output configuration is generated

---

[TestMetricbeatConfig/no_CA - 1]
metricbeat.modules:
  - module: logstash
    metricsets:
      - node
      - node_stats
    period: 10s
    hosts: ["https://localhost:9200"]
    xpack.enabled: true
    
    username: elastic
    
    
    password: password
    
    ssl.enabled: true
    # The ssl verification_mode is set to `certificate` in the config template to verify that the certificate is signed by a trusted authority,
    # but does not perform any hostname verification. This is used when SSL is enabled with or without CA, to support self-signed certificate
    # with a custom CA or custom certificates with or without a CA that most likely are not issued for `localhost`.
    ssl.verification_mode: "certificate"

processors:
  - add_cloud_metadata: {}
  - add_host_metadata: {}

# Elasticsearch output configuration is generated

---
